--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -1,8 +1,14 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
+	"useTabs": false,
+	"tabWidth": 4,
+	"singleQuote": false,
 	"trailingComma": "none",
-	"printWidth": 100,
+	"printWidth": 80,
+	"semi": true,
+	"bracketSpacing": true,
+	"bracketSameLine": true,
+	"quoteProps": "consistent",
+	"arrowParens": "avoid",
 	"plugins": [
 		"prettier-plugin-svelte",
 		"prettier-plugin-tailwindcss"
