--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@fontsource-variable/noto-sans": "^5.1.0",
 		"drizzle-orm": "^0.33.0",
 		"postgres": "^3.4.4"
 	}
