--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,7 @@
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
 		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.22.0",
+		"drizzle-kit": "^0.22.8",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -41,7 +41,9 @@
 	},
 	"dependencies": {
 		"@fontsource-variable/noto-sans": "^5.1.0",
+		"@supabase/ssr": "^0.5.1",
+		"@supabase/supabase-js": "^2.46.1",
 		"drizzle-orm": "^0.33.0",
-		"postgres": "^3.4.4"
+		"postgres": "^3.4.5"
 	}
 }
